# ClonedTelecomSatWorkshop2022

./: README.md
ground-station/: fskDemodulation.grc  fskDemodulation.py
spacecraft/: CMakeLists.txt  waveformVisualization.grc  waveformVisualization.py
spacecraft/inc/: FSKModulator.hpp  helpers.hpp  sdbit.hpp
spacecraft/src/: FSKModulator.cpp  helpers.cpp  main.cpp
